home work 1 end

--- a/Домашнее задание к уроку 1.ipynb
+++ b/Домашнее задание к уроку 1.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3b6fcf21-2224-4f36-bf38-65f2905db1cf",
+   "metadata": {},
+   "source": [
+    "## Простые задания"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8ed5e0-14a5-440a-bccd-7d2f32f40ac1",
    "metadata": {},
    "source": [
@@ -130,12 +138,137 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8caa9495-ee72-489e-bf18-0ad5f941b93f",
+   "cell_type": "markdown",
+   "id": "3380229d-031a-4133-bf0c-31cdda178e92",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Задание 5\n",
+    "В прошлом задании у вас скорее всего не получилось точного значения 0.5 из-за конечной точности вычисления синуса. Но почему некоторые простые операции также могут давать неточный результат? Попробуйте вывести на экран результат операции 0.1 + 0.2. Почему результат неточен?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "31563dda-8002-4fe1-91e0-48abeaf5b449",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30000000000000004"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 + 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56e3e2af-77a1-46a7-9efa-b44d1bf045b9",
+   "metadata": {},
+   "source": [
+    "Ошибка представления связана с тем, что некоторые (на самом деле большинство) десятичные дроби не могут быть точно представлены в виде двоичных (основанных на 2) дробей. Это основная причина, по которой Python часто не отображает точное десятичное число, которое ожидается увидеть"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71874811-3d29-4d9d-b024-8cbee35443c3",
+   "metadata": {},
+   "source": [
+    "## Задания посложнее"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaf99cb0-5490-4935-aae4-49c90ce25dc5",
+   "metadata": {},
+   "source": [
+    "### Задание 1\n",
+    "В переменных a и b записаны 2 различных числа. Вам необходимо написать код, который меняет значения a и b местами без использования третьей переменной.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "6e15a6d4-69ad-4dc5-9a39-2ebc81fb50cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " a = 2; b = 5\n",
+      " a = 5; b = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 5\n",
+    "print (' a = ' + str(a) + '; b = ' + str(b))\n",
+    "a = a+b\n",
+    "b = a-b\n",
+    "a = a-b\n",
+    "print (' a = ' + str(a) + '; b = ' + str(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e31bf262-eb64-4248-a7d6-bbe056675031",
+   "metadata": {},
+   "source": [
+    "### Задание 2\n",
+    "Дано число в двоичной системе счисления: num=10011. Напишите алгоритм перевода этого числа в привычную нам десятичную систему счисления.\n",
+    "Возможно, вам понадобится цикл прохождения всех целых чисел от 0 до m:\n",
+    "for n in range(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "f1cb6234-cc26-4b72-aa5a-ef5eeb9e22fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "num='10011'\n",
+    "decimal_number= int (num, 2) \n",
+    "print (decimal_number) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "2befc120-5443-48f3-afce-65e80549ab14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 10011 \n",
+    "num_10 = 0\n",
+    "for i in str(num):\n",
+    "\tnum_10 = num_10*2+int(i)\n",
+    "print(num_10)"
+   ]
   }
  ],
  "metadata": {
