home work 2 end

--- a/Домашнее задание к уроку 2.ipynb
+++ b/Домашнее задание к уроку 2.ipynb
@@ -1,4 +1,4 @@
-﻿{
+{
  "cells": [
   {
    "cell_type": "markdown",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "7abcea88-ea1b-488c-9015-b1cd56d3c9c2",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "f6ae4499-4414-4a44-a008-419aad1f8b99",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,8 @@
    "source": [
     "for i in geo_logs:\n",
     "    if(i[1][1]) == 'Россия':\n",
-    "        print(i)"
+    "        print(i)\n",
+    "        "
    ]
   },
   {
@@ -562,9 +563,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
